# Projetos-Universidade

./: README.md
Projeto-BD/TP1 - Relacional/: ZooCriacao.sql  ZooDB.mwb  ZooDB.mwb.bak  ZooPovoamento.sql  ZooQueries.sql  ZooUsers.sql
Projeto-BD/TP2 - Não Relacional/: CypherScript (2).txt  CypherScript.txt
Projeto-CC/TP2/ReverseProxy/: build.xml
Projeto-CG/Fase1/CG_TP/: CMakeLists.txt  Makefile  cone.3d  config.xml  cylinder.3d  extractCoords.cpp  generator  generator.cpp  main.cpp  parser.cpp  sphere.3d
Projeto-CG/Fase1/CG_TP/headers/: extractCoords.h  parser.h
Projeto-CG/Fase4/Fase4/: CMakeLists.txt  Makefile  generator  generator.cpp  scales.txt  script.sh
Projeto-CG/Fase4/Fase4/headers/: catmull.h  extractCoords.h  parser.h  structs.h
Projeto-CG/Fase4/Fase4/objects/: sphere.3d
Projeto-CG/Fase4/Fase4/scenes/: catmull_sun.xml  solar_system.xml  solar_system_orbits.xml
Projeto-CG/Fase4/Fase4/src/: catmull.cpp  extractCoords.cpp  main.cpp  parser.cpp  structs.cpp
Projeto-CP/: Pergunta1.hs  Pergunta2.hs  Pergunta3.hs  Pergunta4.hs  Pergunta5.hs  README.md  cp1617t.lhs
Projeto-LI1/: GlossExtras.hs  README.md  Sokoban.hs  mapa.txt  tarefa2.hs  tarefa3.hs  tarefa4.hs  tarefa5.hs  tarefa6.hs
Projeto-LI1/game/: Main.hi  Main.hs  README.md
Projeto-LI2/: README.md  big2.h  geraHTML.c  makefile  manipulaMão.c  mexeEstados.c
Projeto-LI2/cards/: README.md
Projeto-LI2/pictures/: README.md
Projeto-LI3/: README.md
Projeto-LI3/C/: Makefile  README.me  funcs.h  getInfoFstAVL.c  getInfoSndAVL.c  interface.h  program.c  program_.c  querys.c  querysAux.c
Projeto-LI3/Java/: README.md  pom.xml  results.txt  times.txt
Projeto-POO/: Actor.ctxt  Actor.java  ActorRepetidoException.ctxt  ActorRepetidoException.java  ArrayListVazioException.ctxt  ArrayListVazioException.java  Carrinhas.ctxt  Carrinhas.java  Carrinhas_comReservas.ctxt  Carrinhas_comReservas.java  Carros_Ligeiros.ctxt  Carros_Ligeiros.java  Carros_Ligeiros_comReservas.ctxt  Carros_Ligeiros_comReservas.java  Cliente.ctxt  Cliente.java  ErroLogException.ctxt  ErroLogException.java  InfoReservas.ctxt  InfoReservas.java  Menu.ctxt  Menu.java  Motorista.ctxt  Motorista.java  Motos.ctxt  Motos.java  Motos_comReservas.ctxt  Motos_comReservas.java  Ponto2D.ctxt  Ponto2D.java  README.md  Taxi.ctxt  Taxi.java  Umer.ctxt  Umer.java  UmerApp.ctxt  UmerApp.java  Viagem.ctxt  Viagem.java  estado.txt  (+2 more)
Projeto-SD/SD/: build.xml
Projeto-SO/: Makefile  README.md  const.c  control2.txt  controlador.c  controlador.txt  filter.c  node.c  spawn.c  struct.h  t.c  test.txt  window.c
Projeto-SRCR/: README.md
Projeto-SRCR/TP1/: README.md  SRCR1-GRUPO26-prolog.pl
Projeto-SRCR/TP2/: README.md  SRCR2-GRUPO26-prolog.pl
Projeto-SRCR/TP3/: DetVariaveisSig.R  README.md  ScriptRed&Whitenorm.R  TESTESefetuados.xlsx  ValoresNormalizadosFinal.csv
(+221 files in other folders)
